force-app/main/default/objects/Client__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>