force-app/main/default/objects/Client__c/validationRules/Client_Phone_Must_Be_10_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Phone_Must_Be_10_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Phone__c, &quot;^98[0-9]{8}$&quot;))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone NUmber Minimum 10 Digits And Starts With 98</errorMessage>
</ValidationRule>